hot fix for IE and improve TODO, GA fix

--- a/TODO
+++ b/TODO
@@ -4,3 +4,5 @@
  * Ajax comment
  * escape < and > and &
  * avoid duplicated items
+ * fix reload button line break in IE, Opera, Firefox
+ * fix width controllers in browsers not support input[type=range] yet
